# esp32_uart_mqtt_office

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  device.c  device.h  main.c  mqtt_application.c  mqtt_application.h  nets_application.c  nets_application.h  nvs_application.c  nvs_application.h  nvs_keys.h  uart_application.c  uart_application.h
