idf_component_register(
	SRCS 			"device.c"	                
	                "main.c"
	                "nets_application.c"
	                "mqtt_application.c"                    
	                "nvs_application.c"
	                "esp_eth_mac_enc28j60.c"
	                "esp_eth_phy_enc28j60.c"
                    "uart_application.c"
)
   